--- a/vue/打包优化.md
+++ b/vue/打包优化.md
@@ -1,3 +1,162 @@
 # vue 打包优化
-## webpack打包优化
-## vite打包优化
+
+## webpack 打包优化
+
+```javascript
+const { defineConfig } = require("@vue/cli-service");
+
+const isDevelopment = process.env.NODE_ENV === "development";
+const isProduction = process.env.NODE_ENV === "production";
+
+module.exports = defineConfig({
+  transpileDependencies: true,
+  // publicPath: "/",
+  // 用于放置生成的静态资源 (js、css、img、fonts) 的；（项目打包之后，静态资源会放在这个文件夹下）
+  // assetsDir: "static",
+  // 如果你不需要生产环境的 source map，可以将其设置为 false 以加速生产环境构建。
+  productionSourceMap: false,
+  lintOnSave: false, //关闭代码检测
+  // 配置代理跨域
+  devServer: {
+    host: "0.0.0.0",
+    port: 8060,
+    // proxy: 'http://192.168.10.9:18000'
+    proxy: {
+      "/api": {
+        target: "http://192.168.10.9:18000",
+        ws: true,
+        changeOrigin: true,
+        pathRewrite: {
+          "^/api": "",
+        },
+      },
+    },
+  },
+  chainWebpack: (config) => {
+    if (isProduction) {
+      // 删除log
+      config.optimization.minimizer("terser").tap((args) => {
+        // 注释console.*
+        args[0].terserOptions.compress.drop_console = true;
+        // // remove debugger
+        args[0].terserOptions.compress.drop_debugger = true;
+        // // 移除 console.log
+        args[0].terserOptions.compress.pure_funcs = ["console.log"];
+        // // 去掉注释 如果需要看chunk-vendors公共部分插件，可以注释掉就可以看到注释了
+        args[0].terserOptions.output = {
+          comments: false,
+        };
+        return args;
+      });
+    }
+  },
+});
+```
+
+## vite 打包优化
+
+```javascript
+import { defineConfig } from "vite";
+import vue from "@vitejs/plugin-vue";
+import path from "path";
+import Icons from "unplugin-icons/vite";
+import IconsResolver from "unplugin-icons/resolver";
+
+import AutoImport from "unplugin-auto-import/vite";
+import Components from "unplugin-vue-components/vite";
+import { ElementPlusResolver } from "unplugin-vue-components/resolvers";
+// gzip
+import vitePluginCompression from "vite-plugin-compression";
+
+const pathSrc = path.resolve(__dirname, "src");
+export default defineConfig({
+  base: "./", //打包环境
+  resolve: {
+    // 配置别名
+    alias: {
+      "@": pathSrc,
+    },
+  },
+  server: {
+    port: 5173,
+    host: "0.0.0.0",
+    proxy: {
+      "/api": {
+        target: "http://localhost:5173",
+        changeOrigin: true, //跨域
+        // 重写路由
+        rewrite: (path) => path.replace(/^\/api/, ""),
+      },
+    },
+  },
+  plugins: [
+    vue(),
+    // 开启gzip ， 需Nginx开启
+    vitePluginCompression(),
+    AutoImport({
+      // 自动导入 Vue 相关函数，如：ref, reactive, toRef 等,无需页面单独导入
+      imports: ["vue", "vue-router"],
+      resolvers: [
+        ElementPlusResolver(),
+        // 自动导入图标组件
+        IconsResolver({
+          prefix: "Icon",
+        }),
+      ],
+    }),
+    Components({
+      resolvers: [
+        // 自动注册图标组件
+        IconsResolver({
+          enabledCollections: ["ep"],
+        }),
+        ElementPlusResolver(),
+      ],
+    }),
+    Icons({
+      autoInstall: true,
+    }),
+  ],
+  build: {
+    // 清除console和debugger
+    minify: "terser",
+    terserOptions: {
+      compress: {
+        drop_console: true,
+        drop_debugger: true,
+      },
+    },
+    //打包文件大小超出警告-1500kb, 默认500kb
+    chunkSizeWarningLimit: 1500,
+    rollupOptions: {
+      output: {
+        manualChunks(id) {
+          if (id.includes("node_modules")) {
+            return id
+              .toString()
+              .split("node_modules/")[1]
+              .split("/")[0]
+              .toString();
+          }
+        }, // 用于从入口点创建的块的打包输出格式[name]表示文件名,[hash]表示该文件内容hash值
+        // entryFileNames: "js/[name].[hash].js",
+        entryFileNames: "js.[hash].js",
+        // 用于输出静态资源的命名，[ext]表示文件扩展名
+        assetFileNames: "[ext]/[name].[hash].[ext]",
+        // assetFileNames: "[ext].[hash].[ext]",
+        // 用于命名代码拆分时创建的共享块的输出命名
+        // chunkFileNames: "js/[name].[hash].js",
+        // 拆分js到模块文件夹
+        chunkFileNames: (chunkInfo) => {
+          const facadeModuleId = chunkInfo.facadeModuleId
+            ? chunkInfo.facadeModuleId.split("/")
+            : [];
+          const fileName =
+            facadeModuleId[facadeModuleId.length - 2] || "[name]";
+          return `js/${fileName}/name.[hash].js`;
+        },
+      },
+    },
+  },
+});
+```
