--- a/vue/打包优化.md
+++ b/vue/打包优化.md
@@ -20,10 +20,9 @@ module.exports = defineConfig({
   devServer: {
     host: "0.0.0.0",
     port: 8060,
-    // proxy: 'http://192.168.10.9:18000'
     proxy: {
       "/api": {
-        target: "http://192.168.10.9:18000",
+        target: "http://xxxx:xxx",
         ws: true,
         changeOrigin: true,
         pathRewrite: {
