--- a/项目插件/常用项目插件.md
+++ b/项目插件/常用项目插件.md
@@ -47,7 +47,7 @@ https://github.com/wangbin3162/bin-datav
 
 ---
 
-###### 大屏适配插件
+##### 大屏适配插件
 
 v-scale-screen  
 https://gitee.com/alfred-skyblue/v-scale-screen
