提交工具网站

--- a/项目插件/工具网站.md
+++ b/项目插件/工具网站.md
@@ -1,3 +1,19 @@
 # 工具网站
-#### 生成波浪线
+### 图片压缩网站
+https://tinify.cn/
+![GitHub Logo](/static/images/04.png)
+
+#### 生成波浪线 svg
+
 https://getwaves.io/
+![GitHub Logo](/static/images/01.png)
+
+#### 动画库，按钮、加载动画等
+
+纯 css，推荐  
+https://uiverse.io/all
+![GitHub Logo](/static/images/02.png)
+___
+高级动画  
+https://lottiefiles.com/  
+![GitHub Logo](/static/images/03.png)  
