--- a/项目插件/组件库.md
+++ b/项目插件/组件库.md
@@ -15,3 +15,9 @@ ___
 _uview-ui的组件库 （uniapp组件库）_
 https://www.uviewui.com/
 ___
+### 图标库
+阿里巴巴矢量库   
+https://www.iconfont.cn/
+___
+IconPark  
+https://iconpark.oceanengine.com/  
